--- a/ProyectoMancariBlue/Views/Animal/Index.cshtml
+++ b/ProyectoMancariBlue/Views/Animal/Index.cshtml
@@ -20,7 +20,7 @@
     </ul>
 </div>
 
-@if (Model!=null && Model.Any())
+@if (Model != null && Model.Any())
 {
     <div class="row">
         <div class="col-md-12">
@@ -46,7 +46,7 @@
                                         @Html.DisplayNameFor(model => model.PartosRegistrados)
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.PesoKG) 
+                                        @Html.DisplayNameFor(model => model.PesoKG)
                                     </th>
 
                                     <th>
@@ -79,7 +79,7 @@
                                         @if (item.Genero.Equals("H"))
                                         {
                                             <td>
-                                               Hembra
+                                                Hembra
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.PartosRegistrados)
@@ -91,21 +91,21 @@
                                                 Macho
                                             </td>
                                             <td>
-                                              N/A
+                                                N/A
                                             </td>
                                         }
 
 
-                                      
+
                                         <td>
                                             @Html.DisplayFor(modelItem => item.PesoKG) KG.
                                         </td>
-                                       
+
                                         <td>
-                                        @item.Raza.GetDisplayName()
+                                            @item.Raza.GetDisplayName()
                                         </td>
                                         <td>
-                                           @item.FechaNacimiento.ToShortDateString()
+                                            @item.FechaNacimiento.ToShortDateString()
                                         </td>
                                         <td>
                                             @if (item.Estado)
@@ -179,7 +179,7 @@ else
                                         foreach (var value in Enum.GetValues(typeof(ECattle)))
                                         {
                                             var cattle = (ECattle)value;
-                                                    <option value="@((int)cattle)">@cattle.GetDisplayName()</option>
+                                            <option value="@((int)cattle)">@cattle.GetDisplayName()</option>
                                         }
                                     }
                                 </datalist>
@@ -198,7 +198,7 @@ else
                                         {
                                             foreach (var item in (IEnumerable<SelectListItem>)ViewBag.animalList)
                                             {
-                                                        <option value="@item.Value">@item.Text</option>
+                                                <option value="@item.Value">@item.Text</option>
                                             }
                                         }
                                     }
@@ -218,7 +218,7 @@ else
                                         {
                                             foreach (var item in (IEnumerable<SelectListItem>)ViewBag.animalMotherList)
                                             {
-                                                        <option value="@item.Value">@item.Text</option>
+                                                <option value="@item.Value">@item.Text</option>
                                             }
 
                                         }
@@ -287,7 +287,7 @@ else
                 <h5 class="modal-title">Modificar Animal</h5>
             </div>
             <div class="modal-body">
-                <input type="hidden" id="hdfEstadoModify" value="0"/>
+                <input type="hidden" id="hdfEstadoModify" value="0" />
                 <input type="hidden" id="hdfIdModify" value="0" />
                 <div class="row" style=" padding-left: 1rem;">
                     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 pt-4 p-0">
@@ -309,7 +309,7 @@ else
                                         foreach (var value in Enum.GetValues(typeof(ECattle)))
                                         {
                                             var cattle = (ECattle)value;
-                                                    <option value="@((int)cattle)">@cattle.GetDisplayName()</option>
+                                            <option value="@((int)cattle)">@cattle.GetDisplayName()</option>
                                         }
                                     }
                                 </datalist>
@@ -328,7 +328,7 @@ else
                                         {
                                             foreach (var item in (IEnumerable<SelectListItem>)ViewBag.animalList)
                                             {
-                                                        <option value="@item.Value">@item.Text</option>
+                                                <option value="@item.Value">@item.Text</option>
                                             }
 
                                         }
@@ -349,7 +349,7 @@ else
                                         {
                                             foreach (var item in (IEnumerable<SelectListItem>)ViewBag.animalMotherList)
                                             {
-                                                        <option value="@item.Value">@item.Text</option>
+                                                <option value="@item.Value">@item.Text</option>
                                             }
 
                                         }
@@ -364,7 +364,7 @@ else
                             <div class="form-group">
                                 <label>Seleccione el género</label>
                                 <div>
-                                    <input type="radio" id="genderModifyMale"  name="animalGenderModify" value="M">
+                                    <input type="radio" id="genderModifyMale" name="animalGenderModify" value="M">
                                     <label for="genderModifyMale">Macho</label>
                                 </div>
                                 <div>
@@ -531,8 +531,8 @@ else
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pt-4 p-0">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
-                    <div>
-                                <h3 style="text-align: center;">Este registro no presenta vacunas registradas</h3>
+                            <div id="informacionAnimalContainer">
+                              
                             </div>
                         </div>
                     </div>
@@ -630,6 +630,9 @@ else
                 }
             });
 
+
+
+       
 
 
             AnimalEmContainer.style.display = "none";
@@ -759,7 +762,7 @@ else
             ActivateInputEvent('ddlModifyAnimalModal');
             $("#ddlModifyAnimalMothreModal").val(animal.Madre);
             ActivateInputEvent('ddlModifyAnimalMothreModal');
-            if (animal.Genero==='H') {
+            if (animal.Genero === 'H') {
                 $('#genderModifyFemale').prop('checked', true);
                 AnimalModifyEmContainer.style.display = "block";
             }
@@ -804,6 +807,21 @@ else
             $("#hdfIdInfo").val(animal.Id);
             $("#hdfEstadoInfo").val(animal.Estado);
             $("#txtInfoCodigo").attr("readonly", true);
+
+
+            $.ajax({
+                url: '/Animal/ObtenerVacunas',
+                data: { idAnimal: animal.Id },
+                type: 'GET',
+                success: function (data) {
+                    $('#informacionAnimalContainer').html(data);
+                },
+                error: function (error) {
+                    console.log('Error al obtener la información del animal:', error);
+                }
+            });
+
+
 
             OpenModal(modal);
         }
