--- a/ProyectoMancariBlue/Views/Empleado/CrearAdmin.cshtml
+++ b/ProyectoMancariBlue/Views/Empleado/CrearAdmin.cshtml
@@ -42,11 +42,11 @@
                             <input asp-for="Nombre" class="form-control" id="Nombre" disabled />
                             <span asp-validation-for="Nombre" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
+                       @*  <div class="form-group">
                             <label asp-for="Apellidos" class="control-label"></label>
                             <input asp-for="Apellidos" class="form-control" id="Apellidos" disabled />
                             <span asp-validation-for="Apellidos" class="text-danger"></span>
-                        </div>
+                        </div> *@
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
