--- a/ProyectoMancariBlue/Views/Empleado/EditarAdmin.cshtml
+++ b/ProyectoMancariBlue/Views/Empleado/EditarAdmin.cshtml
@@ -28,11 +28,11 @@
                             <input asp-for="Nombre" class="form-control" disabled />
                             <span asp-validation-for="Nombre" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
+                    @*     <div class="form-group">
                             <label asp-for="Apellidos" class="control-label"></label>
                             <input asp-for="Apellidos" class="form-control" disabled />
                             <span asp-validation-for="Apellidos" class="text-danger"></span>
-                        </div>
+                        </div> *@
                         <div class="form-group">
                             <label asp-for="Puesto" class="control-label"></label>
                             <input asp-for="Puesto" class="form-control" disabled />
