--- a/ProyectoMancariBlue/Views/Empleado/VerAdministrador.cshtml
+++ b/ProyectoMancariBlue/Views/Empleado/VerAdministrador.cshtml
@@ -29,10 +29,10 @@
                         <label asp-for="Nombre" class="control-label">Nombre</label>
                         <input asp-for="Nombre" class="form-control" readonly />
                     </div>
-                    <div class="form-group">
+                 @*    <div class="form-group">
                         <label asp-for="Apellidos" class="control-label">Apellidos</label>
                         <input asp-for="Apellidos" class="form-control" readonly />
-                    </div>
+                    </div> *@
                     <div class="form-group">
                         <label asp-for="Correo" class="control-label">Correo</label>
                         <input asp-for="Correo" class="form-control" readonly />
